# fevicol

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: rust_ci.yml
.junie/: guidelines.md
.junie/plans/refactor-main/: plan.md  tasks.md
.junie/plans/run-pump/: plan.md
src/: lib.rs  sensor.rs
src/mqtt/: client.rs  discovery.rs  mod.rs
