[package]
edition      = "2024"
name         = "fevicol"
rust-version = "1.88"
version      = "0.1.0"
# Disable automatic binary discovery to prevent secrets.rs from being compiled as a binary
autobins     = false

[features]
default = []
local_secrets = []
# MQTT client: rust-mqtt (MQTT v5) with embassy-net
# By default we keep integration in placeholder/log-only mode.
# Enable the mqtt feature to compile with the MQTT client.
mqtt = ["dep:rust-mqtt", "dep:embassy-net"]  # MQTT v5 support via rust-mqtt and embassy-net
calibration = []  # Enable sensor calibration mode

[[bin]]
name = "fevicol"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

embedded-io-async = "0.6.1"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = "0.1.1"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
heapless = "0.8"
static_cell = "2.1"
# MQTT client implementations (optional, feature-gated)
rust-mqtt = { version = "0.3", default-features = false, features = ["defmt"], optional = true }
# Network stack for MQTT client
embassy-net = { version = "0.7.1", features = ["tcp", "dhcpv4", "dns"], optional = true }
# Note: embassy-net-driver 0.2.0 is already provided by esp-radio 0.17.0


[dev-dependencies]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = false  # Disabled: LTO strips esp-radio NVS symbols before linker script runs
opt-level        = 's'
overflow-checks  = false

